# Air-S1-Firmware

./: CMakeLists.txt  README.md
lib/S8_UART/: CMakeLists.txt
lib/S8_UART/src/: s8_uart.cpp  s8_uart.h  utils.cpp  utils.h
lib/embedded-i2c-sen5x/: CMakeLists.txt
lib/embedded-i2c-sen5x/src/: sensirion_config.h  sensirion_i2c_hal.c
src/: CMakeLists.txt  RPDeviceReading.proto  SBCDeviceTelemetry.proto  lwipopts.h  main.cpp  simple.proto
src/protobufs/: RPDeviceReading.proto  SBCDeviceTelemetry.proto
